--- a/views/includes/head.ejs
+++ b/views/includes/head.ejs
@@ -28,10 +28,13 @@
     <meta name="theme-color" content="#ffffff" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
+    <!-- <link
       href="https://fonts.googleapis.com/css2?family=Lato:wght@700&Merriweather&family=Roboto:wght@700&display=swap"
       rel="stylesheet"
-    />
+    /> -->
+    <style>
+      @import url('https://fonts.googleapis.com/css2?family=Lato:wght@700&Merriweather&family=Roboto:wght@700&display=swap');
+    </style>
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
