--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,13 +1,15 @@
 :root {
   --lightest-green: #5ccc11;
+  --logo-green: #74c81b;
   --light-green: #098824;
   --cyanest-green: #0ddbc3;
   --cyan-green: #00695c;
   --dark-green: #045603;
   --white-highlight: #ffffff;
+  --black-highlight: #171717;
   --light-grey: #c3c3c3;
   --grey-grey: #696969;
-  --light-dark: #282c34;
+  --light-dark: #292522;
   --darkest: #000000;
   --highlight-yellow: #ffeb3b;
   --highlight-light-danger: #ffb0b0;
@@ -16,6 +18,8 @@
 
 html {
   height: 100%;
+  font-family: 'Merriweather', Georgia, 'Times New Roman', Times, serif !important;
+  --bs-font-sans-serif: 'Merriweather', Georgia, 'Times New Roman', Times, serif !important;
 }
 
 body {
@@ -25,7 +29,7 @@ body {
   background: var(--light-dark) !important;
   color: var(--white-highlight) !important;
   box-sizing: border-box !important;
-  font-family: 'Merriweather' !important;
+  /* font-family: 'Merriweather' !important; */
 }
 
 main {
@@ -40,7 +44,7 @@ main {
   top: 0;
   width: 100%;
   height: 4rem;
-  background-color: var(--light-green);
+  background-color: var(--logo-green);
   box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.8);
 }
 
@@ -67,15 +71,15 @@ main {
 
 .main-header__item a {
   text-decoration: none;
-  font-family: 'Lato';
+  /* font-family: 'Lato'; */
   font-weight: bold;
-  color: var(--white-highlight);
+  color: var(--black-highlight);
 }
 
 .main-header__item a:hover,
 .main-header__item a:active,
 .main-header__item a.active {
-  color: var(--highlight-yellow);
+  color: var(--cyan-green);
 }
 
 .main-header__item a.active {
@@ -118,8 +122,8 @@ main {
 
 #path314:active,
 #path314:hover {
-  stroke: var(--highlight-yellow);
-  fill: var(--highlight-yellow);
+  stroke: var(--cyan-green);
+  fill: var(--cyan-green);
 }
 
 .toggle-button__bar {
