fixed toggle button proportions in mobile-nav

--- a/views/includes/navigation.ejs
+++ b/views/includes/navigation.ejs
@@ -2,7 +2,7 @@
 <header class="main-header">
   <button id="side-menu-toggle">
     <span class="toggle-button__bar"></span>
-    <span class="toggle-button__bar"></span>
+    <span class="toggle-button__bar" style="height: 0.3rem;"></span>
     <span class="toggle-button__bar"></span>
   </button>
   <a
