--- a/public/css/main.css
+++ b/public/css/main.css
@@ -72,6 +72,7 @@ main {
 
 .main-header__item a {
   text-decoration: none;
+  font-size: 1.1rem;
   font-family: 'Lato';
   font-weight: bold;
   color: var(--black-highlight);
