attempt to fix font-awesome icons

--- a/views/includes/head.ejs
+++ b/views/includes/head.ejs
@@ -28,10 +28,6 @@
     <meta name="theme-color" content="#ffffff" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <!-- <link
-      href="https://fonts.googleapis.com/css2?family=Lato:wght@700&Merriweather&family=Roboto:wght@700&display=swap"
-      rel="stylesheet"
-    /> -->
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Lato:wght@700&Merriweather&family=Roboto:wght@700&display=swap');
     </style>
@@ -43,7 +39,8 @@
     />
     <link rel="stylesheet" href="/css/main.css" />
     <link rel="stylesheet" href="/css/footer.css" />
-    <link href="/fa/font-awesome.css" rel="stylesheet" type="text/css">
+    <!-- <link href="/fa/font-awesome.css" rel="stylesheet" type="text/css"> -->
+    <link rel="stylesheet" href="//use.fontawesome.com/releases/v5.0.7/css/all.css">
     <script src="/js/main.js" defer></script>
   </head>
 </html>
