attempt to reduce cart size

--- a/views/includes/navigation.ejs
+++ b/views/includes/navigation.ejs
@@ -112,7 +112,7 @@
       style="order: 1"
     >
       <a href="/cart" class="cart-link <%= path === '/cart' ? 'active' : '' %>">
-        <i class="fa fa-shopping-cart fa-2x"> </i>
+        <i class="fa fa-shopping-cart fa"> </i>
         <div class="cart-link-number"><%= cartNumber %></div>
       </a>
     </li>
