--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -25,11 +25,11 @@
         <div class="col-xs-6 col-md-3">
           <h6>Contact Us</h6>
           <ul class="footer-links">
-            <li><a href="#">About the Company</a></li>
-            <li><a href="#">Privacy Policy</a></li>
-            <li><a href="#">Rate our Services</a></li>
-            <li><a href="#">Our Partners</a></li>
-            <li><a href="#">Work for Us</a></li>
+            <li><a href="https://github.com/nothingnothings/NodeShopMultiPageApp">About the Company</a></li>
+            <li><a href="https://github.com/nothingnothings/NodeShopMultiPageApp">Privacy Policy</a></li>
+            <li><a href="https://github.com/nothingnothings/NodeShopMultiPageApp">Rate our Services</a></li>
+            <li><a href="https://github.com/nothingnothings/NodeShopMultiPageApp">Our Partners</a></li>
+            <li><a href="https://github.com/nothingnothings/NodeShopMultiPageApp">Work for Us</a></li>
           </ul>
         </div>
       </div>
@@ -40,14 +40,14 @@
         <div class="col-md-8 col-sm-6 col-xs-12">
           <p class="copyright-text baseline"
           >&copy; Site developed in 2021 by
-       <a href="#">Arthur Panazolo</a>
+       <a href="https://github.com/nothingnothings">Arthur Panazolo</a>
           </p>
         </div>
         <div class="col-md-4 col-sm-6 col-xs-12">
           <ul class="social-icons">
             <li><a class="twitter" href="https://twitter.com/"><i class="fa fa-twitter"></i></a></li>
             <li><a class="facebook" href="https://www.facebook.com/"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-            <li><a class="linkedin" href="https://linkedin.com/"><i class="fa fa-linkedin"></i></a></li>  
+            <li><a class="linkedin" href="https://linkedin.com/in/arthur-dalla-corte-panazolo"><i class="fa fa-linkedin"></i></a></li>  
             <li><a class="pinterest" href="https://www.pinterest.com/"><i class="fa fa-pinterest"></i></a></li>
             <li><a class="whatsapp" href="https://www.whatsapp.com/"><i class="fa fa-whatsapp"></i></a></li>
           </ul>
