--- a/public/css/main.css
+++ b/public/css/main.css
@@ -78,6 +78,11 @@ main {
   color: var(--black-highlight);
 }
 
+.main-header__item button {
+  font-size: 1.1rem;
+  color: var(--black-highlight);
+}
+
 .main-header__item a:hover,
 .main-header__item a:active,
 .main-header__item a.active {
