--- a/views/includes/navigation.ejs
+++ b/views/includes/navigation.ejs
@@ -84,7 +84,7 @@
       <% } else { %>
       <li class="main-header__item">
         <a href="/cart" class="<%= path === '/cart' ? 'active' : '' %>">
-          <i class="fa fa-shopping-cart"> </i>
+          <i class="fa fa-shopping-cart fa-2x"> </i>
           <div class="cart-link-number"><%= cartNumber %></div>
         </a>
       </li>
