altered shopping-cart hover style

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -497,7 +497,7 @@ main {
 .mobile-nav__item .cart-link:hover,
 .mobile-nav__item .cart-link:active {
   background-color: transparent;
-  color: var(--highlight-yellow);
+  color: var(--lightest-green);
 }
 
 .shop-cart:hover {
