altered .main-header__item button hover/active style

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -109,7 +109,7 @@ main {
   text-decoration: none;
   border: none;
   cursor: pointer;
-  color: var(--highlight-yellow);
+  color: var(--cyan-green);
 }
 
 #svg3 {
