altered .main-header__item button hover/active style

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -509,7 +509,7 @@ main {
 }
 
 .cart-link.active {
-  color: var(--highlight-yellow);
+  color: var(--lightest-green);
 }
 
 @media (max-width: 769px) {
