--- a/views/admin/product-list-admin.ejs
+++ b/views/admin/product-list-admin.ejs
@@ -1,5 +1,5 @@
 <%- include('../includes/head.ejs') %>
-<link rel="manifest" href="../../images/site.webmanifest" />
+<link rel="manifest" href="images/site.webmanifest" />
 <script src="/js/admin.js" defer></script>
     <link rel="stylesheet" href="/css/product.css"></link>
   </head>
