changed auth/cart positioning

--- a/public/css/cart.css
+++ b/public/css/cart.css
@@ -147,7 +147,7 @@
 @media (min-width: 768px) {
   .wrapper {
     margin-top: 0;
-    margin-left: 0.5rem;
+    margin-right: 0.7rem;
   }
 
   .cart__item-list {
