substituted every outline for box-shadow

--- a/public/css/product.css
+++ b/public/css/product.css
@@ -12,7 +12,7 @@
   display: flex;
   flex-direction: column;
   color: var(--darkest);
-  outline: 3px solid var(--darkest);
+  box-shadow: 3px solid var(--darkest);
   top: 115%;
   bottom: 0px;
   margin: auto;
@@ -32,7 +32,7 @@
 
 .product__price {
   text-align: center;
-  outline: 2px var(--white-highlight) solid;
+  box-shadow: 2px var(--white-highlight) solid;
   background-color: var(--white-highlight);
   border-radius: 12px;
   opacity: 1;
