--- a/public/css/orders.css
+++ b/public/css/orders.css
@@ -59,7 +59,7 @@
   justify-content: center;
   align-items: flex-start;
   color: var(--white-highlight);
-  box-shadow: 3px solid var(--lightest-green);
+  box-shadow: 0 0 0 0.18em var(--lightest-green);
   cursor: default;
 }
 
