--- a/public/css/product.css
+++ b/public/css/product.css
@@ -12,7 +12,7 @@
   display: flex;
   flex-direction: column;
   color: var(--darkest);
-  box-shadow: 3px solid var(--darkest);
+  box-shadow: 0 0 0 0.18em var(--darkest);
   top: 115%;
   bottom: 0px;
   margin: auto;
