altered .product__box media query for smaller height devices

--- a/public/css/product.css
+++ b/public/css/product.css
@@ -116,7 +116,7 @@
   }
 }
 
-@media (max-width: 415px) {
+@media (max-width: 415px) and (min-height: 601px) {
   .product__box {
     top: 145%;
   }
